--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
                               alt="Imagem do jogo Gta">
                           </a>
                       </li>
+                      <li>
+                          <a target="_blank"
+                              href="https://www.twitch.tv/directory/game/Fortnite">
+                              <img src="https://static-cdn.jtvnw.net/ttv-boxart/33214-285x380.jpg" 
+                              alt="Imagem do jogo Gta">
+                          </a>
+                      </li>
                   </ul>
               </div>
           </section>
